update font color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="status">
             <h1>Kingsley Eze</h1>
             <div class="message">
-                <h1>Coming Soon</h1>
+                <h2>Coming Soon</h2>
+                <p>*Site on maintenance mode...</p>
             </div>
         </div>
         <div class="image">
