optimize image size

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="./assets/mi.svg" alt="Kingsley Eze">
+            <img src="./assets/mi.jpeg" alt="Kingsley Eze">
         </div>
     </div>
 </body>
