fix site responsiveness

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <body>
     <div class="container">
-        <div class="status">
+        <div class="title">
             <h1>Kingsley Eze</h1>
+        </div>
+        <div class="content">
+        <div class="status">
             <div class="message">
                 <h2>Coming Soon</h2>
                 <p>*Site on maintenance mode...</p>
@@ -20,6 +23,7 @@
         </div>
         <div class="image">
             <img src="./assets/mi.jpeg" alt="Kingsley Eze">
+        </div>
         </div>
     </div>
 </body>
