chore: format document and change div to main

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kingsley Eze | Coming Soon</title>
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
-</head>
+    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+  </head>
 
-<body>
-    <div class="container">
-        <div class="title">
-            <h1>Kingsley Eze</h1>
-        </div>
-        <div class="content">
+  <body>
+    <main>
+      <div class="title">
+        <h1>Kingsley Eze</h1>
+      </div>
+      <div class="content">
         <div class="status">
-            <div class="message">
-                <h2>Coming Soon</h2>
-                <p>*Site on maintenance mode...</p>
-            </div>
+          <div class="message">
+            <h2>Coming Soon</h2>
+            <p>*Site on maintenance mode...</p>
+          </div>
         </div>
         <div class="image">
-            <img src="./assets/mi.jpeg" alt="Kingsley Eze">
+          <img src="./assets/mi.jpeg" alt="Kingsley Eze" />
         </div>
-        </div>
-    </div>
-</body>
-
+      </div>
+    </main>
+  </body>
 </html>
